# os-refresh-config

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  README.md  README.rst  os-refresh-config  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
os_refresh_config/: os_refresh_config.py
os_refresh_config/tests/: test_cmd.py  test_main.py  test_os_refresh_config.py
os_refresh_config/tests/functional/: test_cmd.py
os_refresh_config/tests/unit/: test_main.py  test_os_refresh_config.py
releasenotes/notes/: drop-py2-76af844b0b952a91.yaml
tests/configure.d/: 40-error
tests/pre-configure.d/: 01-test
tools/tests/: run_tests.sh  tc01.sh  tc02.sh  tc03.sh
tools/tests/tc02/td/: call_me_1  call_me_2
tools/tests/tc03/environment.d/: set_var.bash
tools/tests/tc03/td/: call_me_1  call_me_2
zuul.d/: layout.yaml
