[metadata]
name = os-refresh-config
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
summary = Refresh system configuration
description-file =
	README.rst
home-page = http://opendev.org/openstack/os-refresh-config
python-requires = >=3.8
classifier =
	Development Status :: 4 - Beta
	Environment :: Console
	Environment :: OpenStack
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: Implementation :: CPython
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11

[files]
packages =
	os_refresh_config

[entry_points]
console_scripts =
    os-refresh-config = os_refresh_config.os_refresh_config:main

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
