[metadata]
name = os-refresh-config
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
summary = Refresh system configuration
description_file =
    README.rst
home_page = http://opendev.org/openstack/os-refresh-config
python_requires = >=3.8
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[files]
packages =
    os_refresh_config
scripts =
    tools/dib-run-parts

[entry_points]
console_scripts =
    os-refresh-config = os_refresh_config.os_refresh_config:main
